fix: no radius for input boxes on safari ios

--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -32,6 +32,7 @@
   padding: var(--spacings-small);
   border: none;
   width: 100%;
+  border-radius: 0;
   background-color: var(--static-background-background_0-background);
   color: var(--static-background-background_0-text);
 }
